force-app/main/default/objects/Expense/fields/SVMXA360__EntitledDiscount__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitledDiscount__c</fullName>
    <description>This discount indicates the discounted price as per the Contract.</description>
    <label>Entitled Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>