force-app/main/default/objects/Expense/fields/SVMXA360__PriceOverride__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PriceOverride__c</fullName>
    <description>This field when true indicates that the Total Entitled Price and Total Price don&apos;t match.</description>
    <formula>SVMXA360__TotalEntitledPrice__c  &lt;&gt;   ( UnitPrice *  Quantity  - ( Discount / 100 * UnitPrice ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Override</label>
    <type>Checkbox</type>
</CustomField>