force-app/main/default/objects/Expense/fields/SVMXA360__TotalEntitledPrice__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TotalEntitledPrice__c</fullName>
    <description>This formula field calculates the Total Entitled Price.</description>
    <formula>Quantity  *  SVMXA360__EntitledPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Entitled Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>