force-app/main/default/objects/Expense/fields/SVMXA360__UnitCost__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__UnitCost__c</fullName>
    <description>Unit price of the line item.</description>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>